# jax-flash-attn3

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  pyproject.toml  setup.py  test.py
csrc/: error.h  flash_api.cu  flash_api_rust.cu  flash_attn_ops.cpp
jax_flash_attn/: __init__.py  register_ops.py
python/jflash_attn/: register_ops.py
src/: ffi.rs  lib.rs
