[package]
name = "jax_flash_attn"
version = "0.1.0"
edition = "2021"

[lib]
name = "jflash_attn"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
pyo3-build-config = "0.22" 
