[project]
name = "jax_flash_attn"
description = "Flash attention CUDA kernels for jax"
authors = []
requires-python = ">=3.10"
dynamic = ["version"]

[dependencies]
jax = ">=0.4.16"
jaxlib = ">=0.4.16"
numpy = "1.23.1"

[build-system]
requires = ["pybind11>=2.6", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/jax_flash_attn/jax_flash_attn.py"]
wheel.install-dir = "jax_flash_attn"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]
write_to = "src/jax_flash_attn/jax_flash_attn.py"

[tool.maturin]
python-source = "python"
module-name = "jflash_attn._jflash_attn"
